--- a/safari/Better TweetDeck for Safari/Better TweetDeck for Safari Extension/Info.plist
+++ b/safari/Better TweetDeck for Safari/Better TweetDeck for Safari Extension/Info.plist
@@ -19,7 +19,9 @@
     <key>CFBundleShortVersionString</key>
     <string>$(MARKETING_VERSION)</string>
     <key>CFBundleVersion</key>
-    <string>3916</string>
+    <string>2101222253</string>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
     <key>NSExtension</key>
