--- a/safari/Better TweetDeck for Safari/Better TweetDeck for Safari/Info.plist
+++ b/safari/Better TweetDeck for Safari/Better TweetDeck for Safari/Info.plist
@@ -19,7 +19,9 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>3916</string>
+	<string>2101222253</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.social-networking</string>
 	<key>LSMinimumSystemVersion</key>
