--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "run:firefox": "web-ext run -s dist",
     "lint": "eslint {src,tools,config}/**/*.js *.js",
     "test": "npm run lint",
-    "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
+    "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox && npm run build:prod -- safari && npm run pack:safari",
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts",
     "pack:safari": "node tools/update_safari_files.js && xcodebuild -project 'safari/Better TweetDeck for Safari/Better TweetDeck for Safari.xcodeproj/'",
