--- a/package.json
+++ b/package.json
@@ -37,71 +37,72 @@
   ],
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
-    "@types/emoji-mart": "^3.0.2",
+    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@types/emoji-mart": "^3.0.4",
     "@types/feather-icons": "^4.7.0",
     "@types/file-saver": "^2.0.1",
     "@types/hogan.js": "^3.0.0",
-    "@types/jquery": "^3.5.3",
-    "@types/lodash": "^4.14.162",
-    "@types/luxon": "^1.25.0",
-    "@types/node": "^14.14.2",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.168",
+    "@types/luxon": "^1.25.2",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
     "@types/react-portal": "^4.0.2",
     "@types/twit": "^2.2.28",
-    "@types/webpack": "^4.41.23",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "config": "^3.3.2",
-    "cross-env": "^7.0.2",
+    "@types/webpack": "^4.41.26",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "config": "^3.3.3",
+    "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.0.2",
     "dom-chef": "^4.2.2",
     "emoji-mart": "^3.0.0",
-    "emotion": "^10.0.27",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.14.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
-    "eslint-plugin-unused-imports": "^0.1.3",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^1.1.0",
     "feather-icons": "^4.28.0",
-    "file-loader": "^6.1.1",
-    "file-saver": "^2.0.2",
-    "fp-ts": "^2.8.4",
+    "file-loader": "^6.2.0",
+    "file-saver": "^2.0.5",
+    "fp-ts": "^2.9.5",
     "generate-json-webpack-plugin": "^2.0.0",
     "hogan.js": "^3.0.2",
-    "html-webpack-plugin": "^4.5.0",
-    "io-ts": "^2.2.11",
+    "html-webpack-plugin": "^5.1.0",
+    "io-ts": "^2.2.14",
     "lodash": "^4.17.20",
-    "luxon": "^1.25.0",
-    "moduleraid": "^4.0.1",
+    "luxon": "^1.26.0",
+    "moduleraid": "4.0.1",
     "node-config-ts": "^3.1.0",
-    "postcss-loader": "^4.0.4",
+    "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.1.2",
-    "query-string": "^6.13.6",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "prettier": "^2.2.1",
+    "query-string": "^6.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-frame-component": "^4.1.3",
     "style-loader": "^2.0.0",
-    "ts-key-enum": "^2.0.3",
-    "ts-loader": "^8.0.6",
-    "ts-node": "^9.0.0",
-    "ts-toolbelt": "^8.0.7",
-    "typescript": "^4.0.3",
+    "ts-key-enum": "^2.0.7",
+    "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
+    "ts-toolbelt": "^9.3.11",
+    "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
-    "web-ext": "^5.3.0",
-    "webextension-polyfill": "^0.6.0",
-    "webextension-polyfill-ts": "^0.20.0",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0",
-    "zip-webpack-plugin": "^3.0.0"
+    "web-ext": "^5.5.0",
+    "webextension-polyfill": "^0.7.0",
+    "webextension-polyfill-ts": "^0.25.0",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "zip-webpack-plugin": "^4.0.1"
   }
 }
