--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   ],
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-    "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.1.3",
     "@types/emoji-mart": "^3.0.4",
     "@types/feather-icons": "^4.7.0",
@@ -50,12 +49,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
-    "@types/react-portal": "^4.0.2",
     "@types/twit": "^2.2.28",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "config": "^3.3.3",
+    "chalk": "^4.1.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "css-loader": "^5.0.2",
@@ -63,7 +61,6 @@
     "emoji-mart": "^3.0.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -79,7 +76,6 @@
     "io-ts": "^2.2.14",
     "lodash": "^4.17.20",
     "luxon": "^1.26.0",
-    "moduleraid": "4.0.1",
     "node-config-ts": "^3.1.0",
     "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -95,11 +91,13 @@
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
     "web-ext": "^5.5.0",
-    "webextension-polyfill": "^0.7.0",
     "webextension-polyfill-ts": "^0.25.0",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "zip-webpack-plugin": "^4.0.1"
+  },
+  "devDependencies": {
+    "depcheck": "^1.3.1"
   }
 }
