--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "io-ts": "^2.2.14",
     "lodash": "^4.17.20",
     "luxon": "^1.26.0",
+    "monaco-editor-webpack-plugin": "^3.0.0",
     "node-config-ts": "^3.1.0",
     "postcss-loader": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -84,6 +85,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-frame-component": "^4.1.3",
+    "react-monaco-editor": "^0.42.0",
     "style-loader": "^2.0.0",
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^8.0.17",
