--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chalk": "^4.1.0",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "css-loader": "^5.0.2",
