--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
+    "twitter-regexps": "^3.1.1",
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
     "web-ext": "^5.5.0",
