--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
 .DS_Store
 node_modules
 dist/
+build/
 artifacts/*
-config/dev.js
-config/development.js
-config/prod.js
-config/*.json
 config/env/*.json
 !config/default.json
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 # From: https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
-
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries/*
-
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
@@ -27,7 +22,7 @@ config/env/*.json
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 
-output/*
-res-webpack.config.js
-config/production.js
 *.log
+*.xcuserstate
+*.xcworkspacedata
+xcuserdata
