--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start:firefox": "npm run _start -- browser=firefox",
     "start:chrome": "npm run _start -- browser=chrome",
     "serve": "webpack serve --env",
-    "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --env",
-    "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env",
+    "build": "cross-env NODE_ENV=production webpack -p --progress --env",
+    "build:prod": "cross-env NODE_ENV=production webpack --progress --env",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
@@ -27,7 +27,8 @@
     "test": "npm run lint && npm run typecheck",
     "release": "npm run build:prod -- browser=chrome && npm run pack:chrome && npm run build:prod -- browser=firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
-    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts --overwrite-dest"
+    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts --overwrite-dest",
+    "pack:safari": "node tools/update_safari_files.js && xcodebuild -project 'safari/Better TweetDeck for Safari/Better TweetDeck for TweetDeck.xcodeproj/'"
   },
   "browserslist": [
     "last 1 chrome versions",
@@ -87,6 +88,7 @@
     "react-dom": "^17.0.1",
     "react-frame-component": "^4.1.3",
     "react-monaco-editor": "^0.42.0",
+    "simple-plist": "^1.1.1",
     "style-loader": "^2.0.0",
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^8.0.17",
@@ -99,6 +101,7 @@
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
+    "xcode": "^3.0.1",
     "zip-webpack-plugin": "^4.0.1"
   },
   "devDependencies": {
