--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "postinstall": "node-config-ts",
     "run:firefox": "web-ext run -s dist",
     "test": "npm run lint && npm run typecheck",
-    "release": "npm run build:prod -- browser=chrome && npm run pack:chrome && npm run build:prod -- browser=firefox && npm run pack:firefox",
-    "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
-    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts --overwrite-dest",
+    "release": "ts-node tools/release.ts",
     "pack:safari": "node tools/update_safari_files.js && xcodebuild -project 'safari/Better TweetDeck for Safari/BetterTDeck for TweetDeck.xcodeproj/'"
   },
   "browserslist": [
@@ -46,6 +44,8 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@types/archiver": "^5.1.0",
+    "@types/chalk": "^2.2.0",
     "@types/emoji-mart": "^3.0.4",
     "@types/feather-icons": "^4.7.0",
     "@types/file-saver": "^2.0.1",
@@ -61,10 +61,10 @@
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
-    "crx": "^5.0.1",
     "css-loader": "^5.1.1",
     "dom-chef": "^4.2.2",
     "emoji-mart": "^3.0.1",
@@ -75,6 +75,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.0",
+    "execa": "^4.1.0",
     "feather-icons": "^4.28.0",
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
@@ -108,8 +109,7 @@
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "xcode": "^3.0.1",
-    "zip-webpack-plugin": "^4.0.1"
+    "xcode": "^3.0.1"
   },
   "devDependencies": {
     "depcheck": "^1.4.0"
