--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "archiver": "^5.3.0",
+    "blurhash": "^1.1.3",
     "chalk": "^4.1.0",
+    "color-blend": "^3.0.1",
     "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
@@ -89,6 +91,7 @@
     "luxon": "^1.26.0",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "node-config-ts": "^3.1.0",
+    "polished": "^4.1.1",
     "postcss-loader": "^5.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
