--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@emotion/css": "^11.1.3",
     "@types/archiver": "^5.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/color-convert": "^2.0.0",
     "@types/emoji-mart": "^3.0.4",
     "@types/feather-icons": "^4.7.0",
     "@types/file-saver": "^2.0.1",
@@ -62,9 +63,8 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "archiver": "^5.3.0",
-    "blurhash": "^1.1.3",
     "chalk": "^4.1.0",
-    "color-blend": "^3.0.1",
+    "color-convert": "^1.9.3",
     "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
