--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "postcss-loader": "^5.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
+    "prism-react-renderer": "^1.2.0",
     "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
