--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
+    "@types/semver": "^7.3.4",
     "@types/twit": "^2.2.28",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -101,6 +102,7 @@
     "react-dom": "^17.0.1",
     "react-frame-component": "^4.1.3",
     "react-monaco-editor": "^0.42.0",
+    "semver": "^7.3.4",
     "simple-plist": "^1.1.1",
     "style-loader": "^2.0.0",
     "ts-key-enum": "^2.0.7",
