--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "start:firefox": "npm run _start -- browser=firefox",
     "start:safari": "npm run _start -- browser=safari",
     "start:chrome": "npm run _start -- browser=chrome",
-    "serve": "webpack serve --env",
-    "build": "cross-env NODE_ENV=production webpack --progress --env",
-    "build:safari": "npm run build -- browser=safari",
-    "build:firefox": "npm run build -- browser=firefox",
-    "build:chrome": "npm run build -- browser=chrome",
-    "build:prod": "cross-env NODE_ENV=production webpack --progress --env",
-    "build:prod:safari": "npm run build:prod -- browser=safari",
-    "build:prod:firefox": "npm run build:prod -- browser=firefox",
-    "build:prod:chrome": "npm run build:prod -- browser=chrome",
+    "_build": "cross-env NODE_ENV=production webpack --progress --env",
+    "build:safari": "npm run _build -- browser=safari",
+    "build:firefox": "npm run _build -- browser=firefox",
+    "build:chrome": "npm run _build -- browser=chrome",
+    "_build:prod": "cross-env NODE_ENV=production webpack --progress --env",
+    "build:prod:safari": "npm run _build:prod -- browser=safari",
+    "build:prod:firefox": "npm run _build:prod -- browser=firefox",
+    "build:prod:chrome": "npm run _build:prod -- browser=chrome",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
