--- a/package.json
+++ b/package.json
@@ -34,6 +34,15 @@
     "release": "ts-node tools/release.ts",
     "pack:safari": "node tools/update_safari_files.js && xcodebuild -project 'safari/Better TweetDeck for Safari/BetterTDeck for TweetDeck.xcodeproj/'"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{css,md,html,json}": "prettier --write"
+  },
   "browserslist": [
     "last 1 chrome versions",
     "last 1 firefox versions",
@@ -85,8 +94,10 @@
     "generate-json-webpack-plugin": "^2.0.0",
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^5.2.0",
+    "husky": "^5.1.3",
     "io-ts": "^2.2.15",
     "io-ts-reporters": "^1.2.2",
+    "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "luxon": "^1.26.0",
     "monaco-editor-webpack-plugin": "^3.0.0",
