--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
     "@types/semver": "^7.3.4",
+    "@types/stylis": "^4.0.0",
     "@types/twit": "^2.2.28",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -107,6 +108,7 @@
     "semver": "^7.3.4",
     "simple-plist": "^1.1.1",
     "style-loader": "^2.0.0",
+    "stylis": "^4.0.7",
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
