--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@emotion/css": "^11.1.3",
+    "@octokit/core": "^3.4.0",
     "@types/archiver": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/color-convert": "^2.0.0",
