--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "twitter-regexps": "^3.1.1",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
+    "utility-types": "^3.10.0",
     "web-ext": "^5.5.0",
     "webextension-polyfill-ts": "^0.25.0",
     "webpack": "^5.24.3",
