--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/color-convert": "^2.0.0",
     "@types/emoji-mart": "^3.0.4",
     "@types/file-saver": "^2.0.1",
+    "@types/he": "^1.1.1",
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.168",
@@ -87,7 +88,9 @@
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
     "fp-ts": "^2.9.5",
+    "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
+    "he": "^1.2.0",
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^5.2.0",
     "husky": "^5.1.3",
