allow for custom pick of accent color
Fixes https://github.com/eramdam/BetterTweetDeck/issues/539

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
     "@types/semver": "^7.3.4",
@@ -107,6 +108,7 @@
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-monaco-editor": "^0.42.0",
     "semver": "^7.3.4",
