--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "@types/color-convert": "^2.0.0",
     "@types/emoji-mart": "^3.0.4",
     "@types/file-saver": "^2.0.1",
+    "@types/he": "^1.1.1",
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.1",
     "@types/react-frame-component": "^4.1.1",
     "@types/semver": "^7.3.4",
@@ -87,7 +89,9 @@
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
     "fp-ts": "^2.9.5",
+    "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
+    "he": "^1.2.0",
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^5.2.0",
     "husky": "^5.1.3",
@@ -104,6 +108,7 @@
     "prettier": "^2.2.1",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-monaco-editor": "^0.42.0",
     "semver": "^7.3.4",
