--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
     "typecheck": "tsc -p .",
-    "postinstall": "node-config-ts",
+    "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
     "test": "npm run lint && npm run typecheck",
     "release": "ts-node tools/release.ts",
@@ -52,6 +52,7 @@
     "@types/archiver": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/color-convert": "^2.0.0",
+    "@types/config": "^0.0.38",
     "@types/emoji-mart": "^3.0.4",
     "@types/file-saver": "^2.0.1",
     "@types/he": "^1.1.1",
@@ -60,6 +61,7 @@
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.14.31",
+    "@types/prettier": "^2.2.3",
     "@types/react": "^17.0.2",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.1",
@@ -72,6 +74,7 @@
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "color-convert": "^1.9.3",
+    "config": "^3.3.6",
     "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
@@ -96,11 +99,11 @@
     "husky": "^5.1.3",
     "io-ts": "^2.2.15",
     "io-ts-reporters": "^1.2.2",
+    "json-to-ts": "^1.7.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
     "luxon": "^1.26.0",
     "monaco-editor-webpack-plugin": "^3.0.0",
-    "node-config-ts": "^3.1.0",
     "polished": "^4.1.1",
     "postcss-loader": "^5.1.0",
     "postcss-preset-env": "^6.7.0",
