--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
     "typecheck": "tsc -p .",
-    "postinstall": "node-config-ts",
+    "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
     "test": "npm run lint && npm run typecheck",
     "release": "ts-node tools/release.ts",
@@ -52,81 +52,81 @@
     "@types/archiver": "^5.1.0",
     "@types/chalk": "^2.2.0",
     "@types/color-convert": "^2.0.0",
+    "@types/config": "^0.0.38",
     "@types/emoji-mart": "^3.0.4",
-    "@types/file-saver": "^2.0.1",
+    "@types/file-saver": "^2.0.2",
     "@types/he": "^1.1.1",
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.5.5",
-    "@types/lodash": "^4.14.168",
-    "@types/luxon": "^1.26.2",
-    "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
+    "@types/lodash": "^4.14.170",
+    "@types/luxon": "^1.26.5",
+    "@types/node": "^15.6.1",
+    "@types/prettier": "^2.2.3",
+    "@types/react": "^17.0.6",
     "@types/react-color": "^3.0.4",
-    "@types/react-dom": "^17.0.1",
+    "@types/react-dom": "^17.0.5",
     "@types/react-frame-component": "^4.1.1",
-    "@types/semver": "^7.3.4",
+    "@types/semver": "^7.3.6",
     "@types/stylis": "^4.0.0",
     "@types/twit": "^2.2.28",
-    "@types/webpack": "^4.41.26",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "archiver": "^5.3.0",
-    "chalk": "^4.1.0",
-    "color-convert": "^1.9.3",
-    "copy-webpack-plugin": "^8.0.0",
+    "chalk": "^4.1.1",
+    "color-convert": "^2.0.1",
+    "config": "^3.3.6",
+    "copy-webpack-plugin": "^9.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.1.1",
-    "dom-chef": "^4.2.2",
+    "css-loader": "^5.2.6",
+    "dom-chef": "4.2.2",
     "emoji-mart": "^3.0.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unused-imports": "^1.1.0",
-    "execa": "^4.1.0",
-    "file-loader": "^6.2.0",
+    "eslint-plugin-unused-imports": "^1.1.1",
+    "execa": "^5.0.0",
     "file-saver": "^2.0.5",
-    "fp-ts": "^2.9.5",
+    "fp-ts": "^2.10.5",
     "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
     "he": "^1.2.0",
     "hogan.js": "^3.0.2",
-    "html-webpack-plugin": "^5.2.0",
-    "husky": "^5.1.3",
-    "io-ts": "^2.2.15",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "io-ts": "^2.2.16",
     "io-ts-reporters": "^1.2.2",
-    "lint-staged": "^10.5.4",
+    "json-to-ts": "^1.7.0",
+    "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
-    "luxon": "^1.26.0",
-    "monaco-editor-webpack-plugin": "^3.0.0",
-    "node-config-ts": "^3.1.0",
-    "polished": "^4.1.1",
-    "postcss-loader": "^5.1.0",
+    "luxon": "^1.27.0",
+    "monaco-editor-webpack-plugin": "^3.1.0",
+    "polished": "^4.1.2",
+    "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
-    "prism-react-renderer": "^1.2.0",
-    "react": "^17.0.1",
+    "prettier": "^2.3.0",
+    "prism-react-renderer": "^1.2.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.1",
-    "react-monaco-editor": "^0.42.0",
-    "semver": "^7.3.4",
+    "react-dom": "^17.0.2",
+    "react-monaco-editor": "^0.43.0",
+    "semver": "^7.3.5",
     "simple-plist": "^1.1.1",
     "string-replace-loader": "^3.0.1",
     "style-loader": "^2.0.0",
-    "stylis": "^4.0.7",
+    "stylis": "^4.0.10",
     "ts-key-enum": "^2.0.7",
-    "ts-loader": "^8.0.17",
-    "ts-node": "^9.1.1",
+    "ts-loader": "^9.2.2",
+    "ts-node": "^10.0.0",
     "twitter-regexps": "^3.1.1",
-    "typescript": "^4.2.3",
-    "url-loader": "^4.1.1",
+    "typescript": "^4.2.4",
     "utility-types": "^3.10.0",
-    "web-ext": "^5.5.0",
+    "web-ext": "^6.1.0",
     "webextension-polyfill-ts": "^0.25.0",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
     "xcode": "^3.0.1"
   }
