--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ script:
   - npm test
   # Validate against AMO's validation
   - npm run build:firefox && npx web-ext lint -s dist
-  - npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted;
+  # On main: build an unlisted beta for Firefox
+  - if [ "$TRAVIS_BRANCH" = "main" ]; npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted; fi
