--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "_start": "cross-env NODE_ENV=development webpack --watch --progress --env",
     "start:firefox": "npm run _start -- browser=firefox",
+    "start:firefox-beta": "npm run _start -- browser=firefox-beta",
     "start:safari": "npm run _start -- browser=safari",
     "start:chrome": "npm run _start -- browser=chrome",
     "_build": "cross-env NODE_ENV=production webpack --progress --env",
@@ -24,6 +25,7 @@
     "_build:prod": "cross-env NODE_ENV=production webpack --progress --env",
     "build:prod:safari": "npm run _build:prod -- browser=safari",
     "build:prod:firefox": "npm run _build:prod -- browser=firefox",
+    "build:prod:firefox-beta": "npm run _build:prod -- browser=firefox-beta",
     "build:prod:chrome": "npm run _build:prod -- browser=chrome",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
