--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "ts-node": "^10.1.0",
     "twitter-regexps": "^3.1.1",
     "typescript": "^4.3.5",
+    "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
     "web-ext": "^6.2.0",
     "webextension-polyfill-ts": "^0.26.0",
