--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ script:
   # Validate against AMO's validation
   - npm run build:firefox && npx web-ext lint -s dist
   # On main: build an unlisted beta for Firefox
-  # - if [ "$TRAVIS_BRANCH" = "main" ]; then npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted; fi
-  - npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted;
+  - if [ "$TRAVIS_BRANCH" = "main" ]; then npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted; fi
+  # On next: build an unlisted beta for Firefox
+  - if [ "$TRAVIS_BRANCH" = "next" ]; then npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted; fi
