--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
   },
   "browserslist": [
     "last 3 chrome versions",
-    "last 3 firefox versions",
+    "firefox esr",
     "last 3 edge versions",
-    "last 1 safari versions"
+    "last 2 safari versions"
   ],
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
