update twemoji regex for Unicode 13.1 emoji

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/semver": "^7.3.7",
     "@types/stylis": "^4.0.1",
+    "@types/twemoji-parser": "^13.1.1",
     "@types/twit": "^2.2.30",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
@@ -123,7 +124,6 @@
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
-    "twitter-regexps": "^3.1.1",
     "typescript": "^4.3.5",
     "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
