--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "prism-react-renderer": "^1.2.1",
+    "pronouns": "^1.3.3",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -133,5 +134,10 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "xcode": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
   }
 }
