--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "typecheck": "tsc -p .",
     "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
-    "test": "npm run lint && npm run typecheck",
+    "test": "npm run lint && npm run typecheck && jest",
     "release": "ts-node tools/release.ts",
     "update-xcode": "node tools/update_safari_files.js",
     "pack:safari": "npm run update-xcode && xcodebuild -project 'safari/Better TweetDeck for Safari/BetterTDeck for TweetDeck.xcodeproj/'",
