--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
     "test": "npm run lint && npm run typecheck && jest",
+    "jest": "jest",
     "release": "ts-node tools/release.ts",
     "update-xcode": "node tools/update_safari_files.js",
     "pack:safari": "npm run update-xcode && xcodebuild -project 'safari/Better TweetDeck for Safari/BetterTDeck for TweetDeck.xcodeproj/'",
