--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "typecheck": "tsc -p .",
     "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
-    "test": "npm run lint && npm run typecheck",
+    "test": "npm run lint && npm run typecheck && jest",
+    "jest": "jest",
     "release": "ts-node tools/release.ts",
     "update-xcode": "node tools/update_safari_files.js",
     "pack:safari": "npm run update-xcode && xcodebuild -project 'safari/Better TweetDeck for Safari/BetterTDeck for TweetDeck.xcodeproj/'",
@@ -112,6 +113,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "prism-react-renderer": "^1.2.1",
+    "pronouns": "^1.3.3",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -133,5 +135,10 @@
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "xcode": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
   }
 }
