--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "execa": "^5.1.1",
     "file-saver": "^2.0.5",
     "fp-ts": "^2.10.5",
+    "framer-motion": "^5.0.0",
     "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
     "he": "^1.2.0",
@@ -117,6 +118,7 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-monaco-editor": "^0.43.0",
     "semver": "^7.3.5",
     "simple-plist": "^1.1.1",
