run prettier --write

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "lokalise.i18n-ally",
-    "dbaeumer.vscode-eslint"
-  ]
+  "recommendations": ["lokalise.i18n-ally", "dbaeumer.vscode-eslint"]
 }
