--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "lib": [
-      "dom",
-      "es2020"
-    ],
+    "lib": ["dom", "es2020"],
     "moduleResolution": "node",
     "noEmit": true,
     "noEmitHelpers": true,
