--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fix": "prettier --write . && eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
+    "ts-node": "ts-node",
     "typecheck": "tsc -p .",
     "postinstall": "ts-node tools/createDefineConfig.ts",
     "run:firefox": "web-ext run -s dist",
@@ -55,6 +56,7 @@
     "@emotion/css": "^11.1.3",
     "@octokit/core": "^3.5.1",
     "@types/archiver": "^5.1.1",
+    "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/color-convert": "^2.0.0",
     "@types/config": "^0.0.39",
@@ -77,6 +79,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "archiver": "^5.3.0",
+    "axios": "^0.24.0",
     "chalk": "^4.1.1",
     "color-convert": "^2.0.1",
     "config": "^3.3.6",
@@ -126,7 +129,7 @@
     "stylis": "^4.0.10",
     "ts-key-enum": "^2.0.7",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.1.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.3.5",
     "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
