--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/config": "^0.0.39",
     "@types/emoji-mart": "^3.0.5",
     "@types/file-saver": "^2.0.3",
+    "@types/glob": "^7.2.0",
     "@types/he": "^1.1.2",
     "@types/hogan.js": "^3.0.1",
     "@types/jquery": "^3.5.6",
@@ -86,6 +87,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.0.0",
+    "discord.js": "^13.3.1",
     "emoji-mart": "^3.0.1",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
@@ -99,6 +101,7 @@
     "framer-motion": "^5.0.0",
     "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
+    "glob": "^7.1.7",
     "he": "^1.2.0",
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
