--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@octokit/core": "^3.5.1",
+    "@popperjs/core": "^2.10.2",
     "@types/archiver": "^5.1.1",
     "@types/color-convert": "^2.0.0",
     "@types/config": "^0.0.40",
@@ -124,6 +125,7 @@
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-monaco-editor": "^0.43.0",
+    "react-popper": "^2.2.5",
     "semver": "^7.3.5",
     "simple-plist": "^1.3.0",
     "string-replace-loader": "^3.0.3",
