add env variables for Giphy/Tenor API keys for nightly builds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,6 @@ jobs:
           NIGHTLY_DISCORD_WEBHOOK_TOKEN: ${{ secrets.NIGHTLY_DISCORD_WEBHOOK_TOKEN }}
           NIGHTLY_DISCORD_WEBHOOK_ID: ${{ secrets.NIGHTLY_DISCORD_WEBHOOK_ID }}
           NIGHTLY_DISCORD_ROLE_ID: ${{ secrets.NIGHTLY_DISCORD_ROLE_ID }}
+          NIGHTLY_TENOR_API_KEY: ${{ secrets.NIGHTLY_TENOR_API_KEY }}
+          NIGHTLY_GIPHY_API_KEY: ${{ secrets.NIGHTLY_GIPHY_API_KEY }}
         run: npm run build:firefox-beta && npx web-ext sign --api-key="$AMO_API_KEY" --api-secret="$AMO_API_SECRET" -s dist --channel unlisted && npm run ts-node -- tools/uploadNightly.ts
