--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/color-convert": "^2.0.0",
-    "@types/config": "^0.0.39",
+    "@types/config": "^0.0.41",
     "@types/emoji-mart": "^3.0.9",
     "@types/file-saver": "^2.0.5",
     "@types/glob": "^7.2.0",
     "@types/he": "^1.1.2",
     "@types/hogan.js": "^3.0.1",
-    "@types/jquery": "^3.5.6",
+    "@types/jquery": "3.5.6",
     "@types/lodash": "^4.14.171",
     "@types/luxon": "^1.27.1",
     "@types/node": "^16.3.3",
