--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@types/glob": "^7.2.0",
     "@types/he": "^1.1.2",
     "@types/hogan.js": "^3.0.1",
-    "@types/jquery": "3.5.6",
-    "@types/lodash": "^4.14.171",
+    "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.179",
     "@types/luxon": "^2.3.0",
     "@types/node": "^17.0.21",
     "@types/prettier": "^2.4.4",
