--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "execa": "5.1.1",
+    "execa": "^5.*.*",
     "file-saver": "^2.0.5",
     "fp-ts": "^2.11.8",
     "framer-motion": "^5.0.0",
