add script to generate emoji-mart data from emoji-data

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "css-loader": "^6.6.0",
     "discord.js": "^13.6.0",
     "emoji-mart": "^3.0.1",
+    "emojilib": "^3.0.6",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.2",
@@ -134,6 +135,7 @@
     "string-replace-loader": "^3.1.0",
     "style-loader": "^3.1.0",
     "stylis": "^4.0.10",
+    "title-case": "^3.0.3",
     "ts-key-enum": "^2.0.11",
     "ts-loader": "^9.2.7",
     "ts-node": "^10.6.0",
